app/assets/stylesheets/application.css
/* ... */
pre code {
  display: block;
  background-color: #EEE;
  padding: 5px 7px;
}


/*** ABOUT ***/

#about {
  margin-right: 300px;
}

#about .small-about {
  float: right;
  padding: 7px;
  margin-left: 50px;
  border: solid 1px #CCC;
  text-align: center;
  font-weight: bold;
}

#about .small-about img {
  display: block;
  padding-bottom: 5px;
}

#about h2 {
  margin-top: 25px;
  margin-bottom: 8px;
}

#about p {
  margin: 8px 0;
}


/*** FEEDBACK ***/

#feedback {
  width: 680px;
  float: left;
}

#feedback_instructions {
  margin-left: 700px;
  min-width: 225px;
}

#feedback_instructions li {
  margin: 5px 0;
}

#feedback h2.bar {
  padding: 4px 20px;
  margin: 0;
  font-weight: normal;
  color: #333;
  font-size: 14px;
  text-align: center;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  -webkit-border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
  -moz-border-radius-topleft: 6px;
  -moz-border-radius-topright: 6px;
  border: solid 1px #BBB;
  border-bottom-color: #AAA;
  background-color: #DDD;
  background: -webkit-gradient(linear, left top, left bottom, from(#F3F3F3), to(#BBB));
  background: -moz-linear-gradient(top,  #F3F3F3, #BBB);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F3F3F3', endColorstr='#BBB');
}

#feedback form {
  background-color: #EEE;
  padding: 10px 20px;
  border: solid 1px #BBB;
  border-top: none;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
  -moz-border-radius-bottomleft: 5px;
  -moz-border-radius-bottomright: 5px;
}

#feedback .info {
  font-size: 13px;
  margin-bottom: 30px;
}

#feedback label {
  float: left;
  width: 160px;
  text-align: right;
  padding-right: 10px;
  padding-top: 2px;
}

#feedback .actions {
  padding-left: 170px;
}

#feedback input, #feedback textarea {
  font-size: 14px;
}


/*** GIVE BACK ***/

#give_back {
  float: left;
  margin-right: 8px;
  margin-bottom: 5px;
}

#give_back_instructions {
  font-size: 16px;
  margin-top: 20px;
}

#give_back_instructions ol {
  margin: 0;
  padding: 0;
}

#give_back_instructions li {
  padding: 0;
  margin: 30px 28px;
  margin-right: 0;
}

#give_back_instructions li li {
  padding: 0;
  margin: 15px 28px;
  margin-right: 0;
}

/*** DEVISE ***/

.container {
    width: 400px; 
    margin: 0px auto; 
}

.container h2#headline {    
    padding: 4px 20px;
    margin: 0;
    font-weight: normal;
    color: #444;
    font-size: 18px;
    text-align: left;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    -webkit-border-top-left-radius: 6px;
    -webkit-border-top-right-radius: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    border: solid 1px #BBB;
    border-bottom-color: #AAA;
    background: -moz-linear-gradient(top, #EEE, #CCC);
    background: -webkit-gradient(linear, left top, left bottom, from(#EEE), to(#CCC));
    background: -moz-linear-gradient(top, #EEE, #CCC);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EEE', endColorstr='#CCC');
}

.container .content {
    list-style: none;
    margin: 0;    
    border: solid 1px #BBB;
    border-top: none;
    padding: 20px;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    -moz-border-radius-bottomright: 5px;
}

.links {
    margin-top:20px; 
    padding-top: 5px; 
    border-top: 1px solid gray; 
}

input#user_remember_me {
    float:left; 
}

/*** PHOTO GALLERY ***/

.thumb {
    display: block;    
    padding: 8px;
    background-color:white; 
    line-height: 1;    
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    box-shadow: 0 1px 1px rgba(0,0,0,0.075);
    border: solid 1px #CCC;
}

.thumb img {
    display:block; 
    margin: 0px auto; 
}

.thumb a#delete {
    position: relative;
    display: block;
    float: right;
    margin-top: 8px; 
}

.thumb.thumb-list {
  float:left; 
  margin: 15px; 
}

/*** TIPS ***/

.tip {
    margin: 0 0 15px 0; 
    padding: 10px; 
    font-size: 12px; 
    color: #333;   
}

.tip.tip-info p {
       line-height: 18px; 
       margin:0px; 
       padding:0px; 
}

.tip-blue {
    background: #9BD7FF; 
    border: 1px solid #457886; 
    border-right-color: #A2BCC2; 
    border-bottom-color: #A2BCC2; 
}

.tip-info {
    background: #FBFFCE; 
    border: 1px solid #DEEA53; 
    border-right-color: #EFF2C7; 
    border-bottom-color: #EFF2C7; 
}

.tip-success {
    background: #E9F4E4;
    border: 1px solid #76CC5A; 
    border-right-color: #C5E9BA; 
    border-bottom-color: #C5E9BA; 
}

